upload route css

--- a/templates/ranRoute.html
+++ b/templates/ranRoute.html
@@ -21,7 +21,7 @@
     </label>
 
     <p><label>Do you have any comments about the route you ran?</label></p>
-    <textarea id="comment" name="comment" rows="5" cols="190"></textarea>
+    <input type="text" id="comment" name="comment" rows="5" cols="190"></input>
     <p><input type="submit"></p>
 </form>
 
