--- a/templates/routeForm.html
+++ b/templates/routeForm.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <title>Add Route</title>
 </head>
+<link rel='stylesheet' href="{{url_for('static', filename = 'updateForm.css')}}">
 <body>
     <h1>Upload Details About Your Running Route</h1>
 
