--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -12,15 +12,16 @@
        </p> 
 </div>
 
-<div><img class="aboutPic" src="/static/placeholder.svg" alt="One of our awesome creators"> 
+<div><img class="aboutPic" src="/static/yuneydy" alt="One of our awesome creators"> 
     <h3>Yuneydy Paredes</h3>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet tincidunt mi. Aenean vitae volutpat ex. 
-     Proin auctor velit sem, in bibendum arcu vestibulum ut. Curabitur leo odio, faucibus quis erat vel, consectetur accumsan nulla.</p> 
+    <p> Hey! I'm Yuneydy Paredes and I am a junior double majoring in Computer Science and American Studies. I love to cook and crochet, basically two grandma activities.
+        I love to walk everywhere being a New Yorker so I definitely want to get more into running!
+    </p> 
 </div>
 
 <div><img class="aboutPic" src="/static/IMG_3370.HEIC" alt="One of our awesome creators"> 
     <h3>Maya Lu-Heda</h3>
-    <p> I'm Maya Lu-Heda and in the Green Class of 20205. I've been running throughout college and just ran my first Half Marathon. 
+    <p> I'm Maya Lu-Heda and in the Green Class of 2025. I've been running throughout college and just ran my first Half Marathon. 
      I'm excited to build this app and find new, exciting routes in the area!</p> 
 </div>
 
