--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -12,7 +12,7 @@
        </p> 
 </div>
 
-<div><img class="aboutPic" src="/static/yuneydy" alt="One of our awesome creators"> 
+<div><img class="aboutPic" src="/static/yuneydy.jpg" alt="One of our awesome creators"> 
     <h3>Yuneydy Paredes</h3>
     <p> Hey! I'm Yuneydy Paredes and I am a junior double majoring in Computer Science and American Studies. I love to cook and crochet, basically two grandma activities.
         I love to walk everywhere being a New Yorker so I definitely want to get more into running!
