--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -25,7 +25,7 @@
      I'm excited to build this app and find new, exciting routes in the area!</p> 
 </div>
 
-<div><img class="aboutPic" src="/static/placeholder.svg" alt="One of our awesome creators"> 
+<div><img class="aboutPic" src="/static/maddie.jpg" alt="One of our awesome creators"> 
     <h3>Madeleine Hansen</h3>
     <p>My name is Madeleine Hansen and I am class of 2026! I am a Computer Science and Psychology double major. 
         I am a beginner runner excited to keep running in Boston!</p> 
