--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,6 @@
-<!doctype html>
-<html lang='en'>
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-    <meta charset='utf-8'>
-    <!-- for mobile-friendly pages -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name=author content="">
-    <title>{{ page_title }}</title>
-    <link rel='stylesheet' href="{{url_for('static', filename = 'style.css')}}">
-    {% block head_stuff %} {% endblock %}
-</head>
-<body class="join-page">
+{% extends "base.html" %}
+
+{% block main_content %}
 
 {% with messages = get_flashed_messages() %}
 {% if messages %}
@@ -25,7 +13,7 @@
 {% endwith %}
 
 <div class="center-container">
-    <form id="joinform" action="/login/" method="post">
+    <form id="joinform" action="{{url_for('login')}}" method="post">
         <h2>Login</h2>
         
         <label>Username:
