--- a/templates/intro.html
+++ b/templates/intro.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-
-{% block main_content %}
+<link rel='stylesheet' href="{{url_for('static', filename = 'style.css')}}">
 
 <h1 class="intro-center-container">Welcome to RouteScout!</h1>
 
@@ -9,5 +7,3 @@
     <input type="submit" name="submit" value="signup">
   </form>
 
-</body>
-</html>
