--- a/static/style.css
+++ b/static/style.css
@@ -101,18 +101,33 @@ nav ul {
 }
 
 /* ABOUT PAGE */
-.aboutPic {
-    border-radius: 20px;
-    width: 300px;
-    height: 300px;
-}
-
 .about {
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    justify-content: space-between;
-}
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 5px;
+  max-width: 1280px;
+  margin: 0 auto;
+ }
+ 
+ 
+ .aboutPic {
+  border-radius: 10px;
+  width: 300px;
+  height: 300px;
+ }
+ 
+ 
+ .about-text {
+  display: block;
+  width: 300px;
+  text-align: center;
+ }
+
+ .about-title {
+  text-align: center;
+ }
+ 
 
 /* Route Display */
 .route-modal {
