made changes from comments about alpha code; did not fix wave errors

--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -6,7 +6,7 @@
 <h1 class = "about-title">Get to know the team behind RouteScout!</h1>
 
 <div class="about">
-<div><img class="aboutPic" src="/static/IMG_0642.jpg" alt="Nicole Sobski"> 
+<div><img class="aboutPic" src="{{ url_for('static', filename='nicole.jpg') }}" alt="Nicole Sobski"> 
        <div class="about-text">
        <h3>Nicole Sobski</h3>
        <p>I'm Nicole Sobski and I'm a senior majoring in Computer Science. Running has been a big part of my life; it's allowed
@@ -16,7 +16,7 @@
        </div>
 </div>
 
-<div><img class="aboutPic" src="/static/yuneydy.jpg" alt="One of our awesome creators"> 
+<div><img class="aboutPic" src="{{ url_for('static', filename='yuneydy.jpg') }}" alt="Yuneydy"> 
     <div class="about-text">
     <h3>Yuneydy Paredes</h3>
     <p> Hey! I'm Yuneydy Paredes and I am a junior double majoring in Computer Science and American Studies. I love to cook and crochet, basically two grandma activities.
@@ -25,7 +25,7 @@
     </div>
 </div>
 
-<div><img class="aboutPic" src="/static/maya.jpg" alt="One of our awesome creators"> 
+<div><img class="aboutPic" src="{{ url_for('static', filename='maya.jpg') }}" alt="Maya"> 
     <div class="about-text">
     <h3>Maya Lu-Heda</h3>
     <p> I'm Maya Lu-Heda and in the Green Class of 2025. I've been running throughout college and just ran my first Half Marathon. 
@@ -33,7 +33,7 @@
     </div>
 </div>
 
-<div><img class="aboutPic" src="/static/maddie.jpg" alt="One of our awesome creators"> 
+<div><img class="aboutPic" src="{{ url_for('static', filename='maddie.jpg') }}" alt="Maddie"> 
     <div class="about-text">
     <h3>Madeleine Hansen</h3>
     <p>My name is Madeleine Hansen and I am class of 2026! I am a Computer Science and Psychology double major. 
