--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,7 +12,7 @@
 
 
 <div class="center-container">
-  <form id="joinform" action="/join/" method="post">
+  <form id="joinform" action="{{url_for('signUp')}}" method="post">
       <h2>Join RouteScout!</h2>
       
       <label>Username:
