added rankings on a new page on nav bar, the top three users with the most routes and top 3 rated routes show up, css to come

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
     <li><a href="{{ url_for('profileFeed') }}">Profile Feed</a></li>
     <li><a href="{{ url_for('search_route') }}">Search Routes</a></li>
     <li><a href="{{ url_for('aboutUs') }}">About Creators</a></li>
+    <li><a href="{{url_for('ranking') }}">Rankings</a></li>
     <li class="dropdown">
       <a href="javascript:void(0)" class="dropbtn">Profile Options</a>
       <ul class="dropdown-content">
