changed label for starting ending loc

--- a/templates/routeForm.html
+++ b/templates/routeForm.html
@@ -41,7 +41,7 @@
     </p>    
 
     <p>
-        <label for="location">Starting location </label>
+        <label for="starting_town">Starting location </label>
         <select name="starting_town" id="starting_town">
             <option value="Newton">Newton</option>
             <option value="Cambridge">Cambridge</option>
@@ -59,7 +59,7 @@
     </p>
 
     <p>
-        <label for="location">Ending </label>
+        <label for="finishing_town">Ending </label>
         <select name="finishing_town" id="finishing_town">
             <option value="Newton">Newton</option>
             <option value="Cambridge">Cambridge</option>
@@ -75,9 +75,6 @@
             <option value="Revere">Revere</option>
         </select>
     </p>
-
-
-    
     
     <p>
         <label for="location">Location: </label>
