User can download GPX files from the search page

--- a/templates/routeSearch.html
+++ b/templates/routeSearch.html
@@ -181,6 +181,11 @@
             <div class="modal-iframe-container">
                 <iframe alt="No map was uploaded for this route." src="{{route['embedded_map_link']}}"></iframe>
               </div>
+            {% if route['route_tcx'] and 'uploads/' in route['route_tcx'] %}
+              <a href="{{ url_for('static', filename=route['route_tcx']) }}" class="btn-small focusable" download>Download GPX</a>
+            {% else %}
+                <p>No downloadable route available</p>
+            {% endif %}
             <p><b>Route ID:</b> {{route["routeID"]}}</p>
             <p><b>Uploaded By:</b> {{route["username"]}}</p>
             <p><b>Date/Time:</b> {{route["created_at"]}}</p>
