potential fix for <title> probs with WAVE

--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -2,6 +2,12 @@
 
 {% block main_content %}
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Details about RouteScout developers</title>
+</head>
 
 <h1 class = "about-title">Get to know the team behind RouteScout!</h1>
 
