--- a/templates/rankings.html
+++ b/templates/rankings.html
@@ -2,6 +2,13 @@
 
 {% block main_content %}
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Rank and display details on runs </title>
+</head>
+
 <h1 class = "about-title">Top Users on Route Scout Right Now with the Most Amount of Routes Uploaded!</h1>
 
 
