--- a/templates/routeForm.html
+++ b/templates/routeForm.html
@@ -6,7 +6,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Share and Upload Your Running Routes</title>
+    <title>Upload detailed and personalized running routes</title>
 </head>
 <link rel='stylesheet' href="{{url_for('static', filename = 'updateForm.css')}}">
 <body>
@@ -21,8 +21,7 @@
     <p>
         <label for="notes">Route Description, Notes or Tips: </label>
         <textarea name="notes" id = "notes" rows="4" placeholder="Describe notable features, challenges, or other details"></textarea>
-
-        
+  
     </p>
 
     <p>
