--- a/templates/routeSearch.html
+++ b/templates/routeSearch.html
@@ -2,6 +2,13 @@
 
 {% block main_content %}
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Search for a running route given certain conditions</title>
+</head>
+
 
 <!-- Button to open the filter side pop-up -->
 <div class="legend">
