--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,6 +2,12 @@
 
 {% block main_content %}
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Build Individual Runner Profile Here</title>
+</head>
 
 <h1>Your profile</h1>
 
