adding to rankings page

--- a/templates/rankings.html
+++ b/templates/rankings.html
@@ -8,21 +8,21 @@
 <div class="ranking-container">
     <div class="user-box">
         <div class="ranking-label">1st Place</div>
-        <p class="username">username: {{ topUsers[0][1] }}</p>
-        <p class="username">pronouns: {{ topUsers[0][2] }}</p>
-        <p class="username">number of routes created: {{ topUsers[0][4] }}</p>
+        <p class="username">Username: {{ topUsers[0][1] }}</p>
+        <p class="username">Pronouns: {{ topUsers[0][2] }}</p>
+        <p class="username">Number of routes created: {{ topUsers[0][4] }}</p>
     </div>
     <div class="user-box">
         <div class="ranking-label">2nd Place</div>
-        <p class="username">username: {{ topUsers[1][1] }}</p>
-        <p class="username">pronouns: {{ topUsers[1][2] }}</p>
-        <p class="username">number of routes created: {{ topUsers[1][4] }}</p>
+        <p class="username">Username: {{ topUsers[1][1] }}</p>
+        <p class="username">Pronouns: {{ topUsers[1][2] }}</p>
+        <p class="username">Number of routes created: {{ topUsers[1][4] }}</p>
     </div>
     <div class="user-box">
         <div class="ranking-label">3rd Place</div>
-        <p class="username">username: {{ topUsers[2][1] }}</p>
-        <p class="username">pronouns: {{ topUsers[2][2] }}</p>
-        <p class="username">number of routes created: {{ topUsers[2][4] }}</p>
+        <p class="username">Username: {{ topUsers[2][1] }}</p>
+        <p class="username">Pronouns: {{ topUsers[2][2] }}</p>
+        <p class="username">Number of routes created: {{ topUsers[2][4] }}</p>
     </div>
 </div>
 
@@ -32,24 +32,27 @@
 <div class="ranking-container">
     <div class="user-box">
         <div class="ranking-label">1st Place</div>
-        <p class="username">route ID: {{ topRoutes[0][0] }}</p>
-        <p class="username">route name: {{ topRoutesDescription[0][0] }}</p>
-        <p class="username">route description: {{ topRoutesDescription[0][1] }}</p>
-        <p class="username">mileage: {{ topRoutesDescription[0][2] }}</p>
+        <p class="username">Route ID: {{ topRoutes[0][0] }}</p>
+        <p class="username">Route Name: {{ topRoutesDescription[0][0] }}</p>
+        <p class="username">Route Description: {{ topRoutesDescription[0][1] }}</p>
+        <p class="username">Mileage: {{ topRoutesDescription[0][2] }}</p>
+        <p class="username">Number of Stars Out of 5: {{ topRoutes[0][1] }}</p>
     </div>
     <div class="user-box">
         <div class="ranking-label">2nd Place</div>
-        <p class="username">route ID: {{ topRoutes[1][0] }}</p>
-        <p class="username">route name: {{ topRoutesDescription[1][0] }}</p>
-        <p class="username">route description: {{ topRoutesDescription[1][1] }}</p>
-        <p class="username">mileage: {{ topRoutesDescription[1][2] }}</p>
+        <p class="username">Route ID: {{ topRoutes[1][0] }}</p>
+        <p class="username">Route Name: {{ topRoutesDescription[1][0] }}</p>
+        <p class="username">Route Description: {{ topRoutesDescription[1][1] }}</p>
+        <p class="username">Mileage: {{ topRoutesDescription[1][2] }}</p>
+        <p class="username">Number of Stars Out of 5: {{ topRoutes[1][1] }}</p>
     </div>
     <div class="user-box">
         <div class="ranking-label">3rd Place</div>
-        <p class="username">route ID: {{ topRoutes[2][0] }}</p>
-        <p class="username">route name: {{ topRoutesDescription[2][0] }}</p>
-        <p class="username">route description: {{ topRoutesDescription[2][1] }}</p>
-        <p class="username">mileage: {{ topRoutesDescription[2][2] }}</p>
+        <p class="username">Route ID: {{ topRoutes[2][0] }}</p>
+        <p class="username">Route Name: {{ topRoutesDescription[2][0] }}</p>
+        <p class="username">Route Description: {{ topRoutesDescription[2][1] }}</p>
+        <p class="username">Mileage: {{ topRoutesDescription[2][2] }}</p>
+        <p class="username">Number of Stars Out of 5: {{ topRoutes[2][1] }}</p>
     </div>
 </div>
 
