--- a/static/style.css
+++ b/static/style.css
@@ -360,11 +360,26 @@ nav ul {
 .profile-info {
   background-color: #c3dbcd;
   border: 1px solid #ddd; 
-  border-radius: 10px;
+  border-radius: 20px;
   padding: 20px;
-  width: 400px;
+  width: 550px;
+  margin: 50px auto;
 }
 
+.profile-text {
+  text-align: center;
+}
+
+.profile-photo {
+  border-radius: 10px;
+  width: 300px;
+  height: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+ }
+ 
 /* Animation to slide the sidebar in and out */
 .filter-sidebar.open {
     width: 350px;
