trying to fix wave errors for profile page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -46,9 +46,9 @@
             <input id="new-pace-sec" name="new-pace-sec" type="text" value="{{ avgPaceSec }}" maxlength="2" class="small-input"></td>
         </tr>
         <tr>
-            <td><label for="profile-picture">Profile Picture (must be jpeg):</label>
-                <input type="file" id="profilepic" name="profilepic" accept=".jpeg">
-            </td>
+            <td><label for="profilepic">Profile Picture (must be jpeg):</label></td>
+            <td><input type="file" id="profilepic" name="profilepic" accept=".jpeg"></td>
+            
         </tr>
     </table>
     <div>
