replaced tcx with gpx

--- a/templates/routeForm.html
+++ b/templates/routeForm.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block main_content %}
-
+<!-- This page is for uploading routes to RouteScout-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,8 +25,8 @@
     </p>
 
     <p>
-        <label for="route_tcx">Route TCX:</label>
-        <input type="file" id="route_tcx" name="route_tcx" accept=".gpx" required><br>
+        <label for="route_gpx">Route TCX:</label>
+        <input type="file" id="route_gpx" name="route_gpx" accept=".gpx" required><br>
    
     </p>    
     
