--- a/templates/routeSearch.html
+++ b/templates/routeSearch.html
@@ -215,7 +215,7 @@
                 {% endfor %}
             </ul>
             
-            <form id="star_rating">
+            <form id="star_rating" class="star_rating">
                 
                 <p> Rate this route: </p>
                 <input value="0" id="star0" checked
